<resources>
    <string name="app_name">Medicalapp</string>
    <string name="facebook_app_id">604710573957992</string>
    <string name="fb_login_protocol_scheme">fb604710573957992</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyBr4fC60qcaJzTdfJJLWdIRDjXy9IohH4s</string>
    <string name="sxdsd">hello hd dhj hjkfh dhk kl fkh fh kf hk fhkhdkh khff kh f kf h f kdkh f hf ffh hf d d hf d fdk dffhfh fhdfdff;hfhf fdh hd fhddfhhfdfhfhfdfkjf fjh jfkshf</string>
    <string name="gallary">Gallery</string>
    <string name="camera">Camera</string>
    <string name="prescription">Prescription</string>
    <string name="add_new_medicine_to_prescription">Add new Medicine to prescription</string>
    <string name="total_amount">TOTAL AMOUNT:</string>
    <string name="termine">Termine</string>
    <string name="alternatives">Alternatives</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="gonflement_de_ganglions">Gonflement de ganglions</string>
    <string name="assosciated_diseases">Assosciated diseases</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="dr_xyz_singh">Dr. Xyz Singh</string>
    <string name="cheast_specialist">Cheast Specialist</string>
    <string name="_4_year_of_experience">4 year of Experience</string>
    <string name="based_on_your_experience_do_you_recommend_visiting_the_clinic">Based on Your Experience, Do you recommend visiting the clinic?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="h_123_sector_63_noida">H/123 Sector 63 Noida</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="_9078675645">9078675645</string>
    <string name="worktime">WorkTime</string>
    <string name="monday_to_saturday">Monday to Saturday</string>
    <string name="_10_00_a_m_to_4_00_pm">10:00 A.M to 4:00 PM</string>
    <string name="hospitals">Hospitals</string>
    <string name="indications_and_dosage">Indications and Dosage</string>
    <string name="actifedduo_lp_rhinitr_allergiq">Actifedduo Lp Rhinitr Allergiq</string>
    <string name="presentation">Presentation</string>
    <string name="precautions">Precautions</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="adverse_effects">Adverse effects</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="welcome_home_sign_in_to_manage_your_device_and_accessories">Welcome home! Sign In to manage Your device and accessories</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="create_acount">CREATE ACOUNT</string>
    <string name="other_login_methods">Other Login Methods</string>
    <string name="login_with_facebook">Login with FaceBook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="home">HOME</string>
    <string name="your_position">Your Position</string>
    <string name="sign_up_sign_in">Sign up / Sign in</string>
    <string name="personal_information">Personal Information</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="contact_us">Contact us</string>
    <string name="our_partners">Our Partners</string>
    <string name="logout">Logout</string>
    <string name="angine_inflamation_des_amygdales_amygdalite">Angine.Inflamation des amygdales,amygdalite</string>
    <string name="best_price_mode">Best price Mode</string>
    <string name="categories">Categories</string>
    <string name="denomination">Denomination</string>
    <string name="all">All</string>
    <string name="refundable">Refundable</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select Time</string>
    <string name="around_me">Around me</string>
    <string name="recommended">Recommended</string>
    <string name="keyword">Keyword</string>
    <string name="mobile_phone_number">mobile phone number</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="update_photo">Update Photo</string>
    <string name="i_have_read_and_i_accept_terms_of_use">I have read and I accept<b><font color='#4278F7'> Terms Of Use</font></b> </string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="symptoms">Symptoms</string>
    <string name="average_period_length">Average Period length</string>
    <string name="compute">Compute</string>
    <string name="health_directory">Health\nDirectory</string>
    <string name="health_directory_sec">Health Directory</string>
    <string name="healthcare_support">HealthCare\nSupport</string>
    <string name="healthcare_support_2">HealthCare Support</string>
    <string name="medicine">Medicine</string>
    <string name="my_space">My Space</string>
    <string name="ladies_space">Ladies\nSpace</string>
    <string name="ladies_space_2">Ladies Space</string>
    <string name="distributer_space">Distributer\nSpace</string>
    <string name="useful_numbers">Useful\nNumbers</string>
    <string name="brand">Brand</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="activity">Activity</string>
    <string name="phone">Phone</string>
    <string name="mobile_no">Mobile No</string>
    <string name="map_position">Map position</string>
    <string name="height_in_meters">Height(in centimeters)</string>
    <string name="create_a_new_presciption">Create a new Prescription</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="laboratorie_dentaire_chaouai_aloaoaii">Laboratorie Dentaire Chaouai Aloaoaii</string>
    <string name="_98_building_no_noida">98,Building no , Noida</string>
    <string name="_989089009">989089009</string>
    <string name="les_personnesddasdaf_fdfdfgfg_fdg_anemiques_doivent_regulerment_consommer_du_cumin_parce_quil_est_riche_en_fer">Les Personnesddasdaf fdfdfgfg fdg anemiques doivent regulerment consommer du cumin parce quil est riche en fer</string>
    <string name="my_profile">My Profile</string>
    <string name="complaint">Complaint</string>
    <string name="settings">Settings</string>
    <string name="help_and_legal_notice">Help and Legal Notice</string>
    <string name="heading_type_text">Heading Type Text</string>
    <string name="_20_sepetember_2020">20 sepetember 2020</string>
    <string name="title">Title</string>
    <string name="ritik_rathaur">Ritik Rathaur</string>
    <string name="hello_pleadd_dsfdf">Hello pleadd dsfdf</string>
    <string name="my_name_is_abc">My Name is abc</string>
    <string name="_12_feb_2021">12 Feb 2021</string>
    <string name="date">Date</string>
    <string name="ord_01_03_2022">ORD_01-03-2022</string>
    <string name="deficience_en_vitamin_d_un_feacture">Deficience en Vitamin D: un feacture..</string>
    <string name="fire_fighters">Fire Fighters</string>
    <string name="weight_before_pregnancy">Weight before pregnancy</string>
    <string name="languages">Languages</string>
    <string name="advice">Advice</string>
    <string name="clicnic">Clinics</string>
    <string name="doctor">Doctors</string>
    <string name="labora">Laboratories</string>
    <string name="radiology">Radiology</string>
    <string name="ne">News</string>
    <string name="birth_contro">Birth Control</string>
    <string name="fertiliy">Fertility</string>
    <string name="indicis_dosage">Indication and Dosage</string>
    <string name="advance_serch">Advance Search</string>
    <string name="prescriptio">Prescription</string>
    <string name="new_en">New Entry</string>
    <string name="my_fav">My favorites</string>
    <string name="hello">Hello This is First News</string>
    <string name="select_city">Select Muncipality</string>
    <string name="selct_categories">Select Category</string>
    <string name="selct_doctor_speclity">Select Doctor Speciality</string>
    <string name="selct_spec">Select Clinic Speciality</string>
    <string name="alert">Alert</string>
    <string name="findadoct">FindADoct</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="surname">SurName</string>
    <string name="ddf">Phone Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="open_time">Open Time</string>
    <string name="close">Close Time</string>
    <string name="medicines">Medicines</string>
    <string name="price_50">Price : $50</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="please_select">Please Select Category</string>
    <string name="please_select_br">Please Select Brand</string>
    <string name="your_favourite_list_is_empty">Your Favourite List is Empty</string>
    <string name="nothing">NOTHING</string>
    <string name="name_enter">Please Enter Your Name</string>
    <string name="desc">Please Enter Description</string>
    <string name="mo">Enter Mobile Number</string>
    <string name="ema">Enter Your Email</string>
    <string name="se">Select Photo</string>
    <string name="pleas_Read">Please Read Terms and Policies</string>
    <string name="p_lengh">Please Enter Average Period Length</string>
    <string name="last_period_date">Please Choose Last Period Date</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="take_med">It\'s Time to take your medicine.</string>
    <string name="med">Take Your Medicine</string>
    <string name="end_date">End Date</string>
    <string name="start">Start Date</string>
    <string name="schosse_medicne">Please Choose Start Date of Medicine taken</string>
    <string name="end_date_medicie">Please Choose  End Date of Medicine taken</string>
    <string name="time_taken">Please Choose Medicine taken time</string>
    <string name="log">Please Login with your gmail account for taken your medicine schedule !</string>
    <string name="load">Loading...</string>
    <string name="add_med_successfully">Your medicine schedule added Successfully</string>
    <string name="height">Please Enter Height in Meter</string>
    <string name="bef_weight">Please Enter Weight in Kg Or Please enter three digit number only</string>
    <string name="week">Please Enter no of Week Or Please enter three digit number only</string>
    <string name="week2">Please Enter number of Week.</string>
    <string name="cur_weight">Please Enter Current Weight in Kg Or Please enter three digit number only</string>
    <string name="no_result">No Result Available for this Search</string>
    <string name="you_are_below_recommended_weight">You are below recommended weight</string>
    <string name="increased">Your weight has increased by</string>
    <string name="descreased">Your weight has decreased by</string>
    <string name="kg">" Kg"</string>
    <string name="ideal_weight">With ideal growth, your weight should be 82.5kg</string>
    <string name="weight_range">You should have taken between 20.0 kg to 22.0 kg</string>
    <string name="current_weight">Current weight</string>
    <string name="exper">Experience</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_mobile">Enter Your Mobile No.</string>
    <string name="number">Phone number</string>
    <string name="SAM">SAM</string>
</resources>