<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Contact_Us_Fragment">

  <EditText
      android:id="@+id/full_name_edit"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:background="@drawable/edit_field"
      android:layout_marginTop="20dp"
      android:textColor="@color/black"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:text=""
      android:textColorHint="@color/dark_gray"
      android:hint="@string/full_name"
      android:paddingLeft="15dp"
      android:paddingEnd="15dp"
      android:paddingStart="15dp"
      android:paddingRight="15dp"/>
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="@color/dark_gray"
        android:textColor="@color/black"
        android:background="@drawable/edit_field"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_field"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:layout_marginRight="20dp"
        android:text=""
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/mobile_no"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/message_fiel"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginRight="20dp"
        android:text=""
        android:textColorHint="@color/dark_gray"
        android:gravity="start"
        android:paddingTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:maxLines="6"
        android:hint="@string/message"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginLeft="20dp"
    android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checkbox_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:buttonTint="@color/purple_700"

        />
    <TextView
        android:id="@+id/accept_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:text="@string/i_have_read_and_i_accept_terms_of_use"/>
  </LinearLayout>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/send"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buton_background"/>

</LinearLayout>