<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/unread_noti_design"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/layout_click">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/title"
            android:layout_toRightOf="@+id/title"
            android:text="@string/SAM"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/title"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/doc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_pleadd_dsfdf"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/name"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/name"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="16sp"
            android:layout_below="@+id/name"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/message_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/message"
            android:layout_toRightOf="@+id/message"
            android:text="@string/my_name_is_abc"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/message_date"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/date_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_date"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/date"
            android:layout_toRightOf="@+id/date"
            android:text="@string/_12_feb_2021"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/cancle_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@+id/message_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:tint="@color/dark_gray"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_baseline_delete_24" />

    </RelativeLayout>

</LinearLayout>